added db connection. register, login and logout. auth context to handle the state of logged in. cookie management, and jwt implementation for authentication

--- a/frontend/src/lang/en.json
+++ b/frontend/src/lang/en.json
@@ -9,6 +9,7 @@
   "layout.header.link.candle": "Light a Candle",
   "layout.header.link.homepage": "Homepage",
   "layout.header.link.about": "About",
+  "layout.header.link.logout": "Logout",
   "layout.sidebar.link.familystories": "Family Stories",
   "layout.sidebar.link.publicstories": "Fallen Stories",
   "layout.sidebar.link.donations": "Donations",
