--- a/frontend/src/lang/he.json
+++ b/frontend/src/lang/he.json
@@ -9,6 +9,7 @@
   "layout.header.link.candle": "הדלק נר",
   "layout.header.link.homepage": "דף הבית",
   "layout.header.link.about": "אודות",
+  "layout.header.link.logout": "התנתק",
   "layout.sidebar.link.familystories": "סיפורי משפחות",
   "layout.sidebar.link.publicstories": "סיפורי נופלים",
   "layout.sidebar.link.donations": "תרומות",
