new form to add a soldier. removed static images from website, only using links from existing images online. added gallery page. fixed icons issues. theres a bug with logout, and a bug with globals.css not being loaded when routing directly to any page

--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -10,14 +10,23 @@
   "layout.header.link.homepage": "דף הבית",
   "layout.header.link.about": "אודות",
   "layout.header.link.logout": "התנתק",
+  "layout.sidebar.link.soldiers": "גלריה",
   "layout.sidebar.link.familystories": "סיפורי משפחות",
-  "layout.sidebar.link.publicstories": "סיפורי נופלים",
+  "layout.sidebar.link.publicstories": "סיפורי חללים",
   "layout.sidebar.link.donations": "תרומות",
+  "layout.sidebar.link.addsoldier": "הוסף חייל",
   "layout.footer.link.contact": "צור קשר",
   "layout.footer.link.accessibility": "נגישות",
   "layout.footer.link.privacy": "פרטיות",
   "layout.footer.link.map": "מפת האתר",
   "page.home.header": "ברוכים הבאים לאתר הנצחה",
   "page.home.search.label": "חפש...",
-  "page.publicblog.header": "סיפורי נופלים"
+  "page.publicblog.header": "סיפורי חללים",
+  "page.addSoldier.title": "הוספת חייל",
+  "page.addSoldier.name": "שם",
+  "page.addSoldier.rank": "דרגה",
+  "page.addSoldier.unit": "יחידה",
+  "page.addSoldier.deathdate": "תאריך פטירה",
+  "page.addSoldier.image": "כתובת תמונה",
+  "page.addSoldier.button.add": "הוסף"
 }
