--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,9 +10,11 @@
   "layout.header.link.homepage": "Homepage",
   "layout.header.link.about": "About",
   "layout.header.link.logout": "Logout",
+  "layout.sidebar.link.soldiers": "Gallery",
   "layout.sidebar.link.familystories": "Family Stories",
   "layout.sidebar.link.publicstories": "Fallen Stories",
   "layout.sidebar.link.donations": "Donations",
+  "layout.sidebar.link.addsoldier": "Add Soldier",
   "layout.footer.link.contact": "Contact",
   "layout.footer.link.accessibility": "Accessibility",
   "layout.footer.link.privacy": "Privacy",
