more translations. modular css for less side effects. minimalized footer. need to fix stories pages and style it and the websites core is done. only search functionality will be missing

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,5 +24,11 @@
   "page.home.search.label": "Search...",
   "page.publicblog.header": "Fallen Stories",
   "page.soldier.stories.titles": "Stories",
-  "page.candle.headline": "Click on the candle to light it for 24 hours"
+  "page.candle.headline": "Click on the candle to light it for 24 hours",
+  "page.login.login.label": "Login",
+  "page.login.username.label": "Username",
+  "page.login.password.label": "Password",
+  "page.register.register.label": "Register",
+  "page.register.username.label": "Username",
+  "page.register.password.label": "Password"
 }
