--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -37,5 +37,9 @@
   "page.login.password.label": "סיסמה",
   "page.register.register.label": "הרשם",
   "page.register.username.label": "שם משתמש",
-  "page.register.password.label": "סיסמה"
+  "page.register.password.label": "סיסמה",
+  "search.placeholder": "חפש...",
+  "page.about.text": "עמוד זה מוקדש לזכרם של חללי מערכות ההגנה בצבא ההגנה לישראל שנפלו במלחמת חרבות ברזל. האתר נועד להנציח את גבורתם וזכרם של הלוחמים האמיצים שהקריבו את חייהם למען בטחון מדינת ישראל. כאן תוכלו למצוא סיפורי חיים, תמונות וזיכרונות שנאספו ממשפחות, חברים ומפקדים של החללים. יחד, נשמור על זכרם ונכבד את מורשתם. אנו מזמינים אתכם לשתף בזיכרונות ובסיפורים אישיים כדי להעשיר ולהוסיף לגלריית הזכרון. יהי זכרם ברוך.",
+  "page.about.header": "אודותינו",
+  "page.gallery.headline": "גלריה"
 }
