admin panel to handle approving stories, soldiers, and banning users for misbehaving

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,6 +16,7 @@
   "layout.sidebar.link.publicstories": "Fallen Stories",
   "layout.sidebar.link.donations": "Donations",
   "layout.sidebar.link.addsoldier": "Add Soldier",
+  "layout.sidebar.link.admin": "Admin Panel",
   "layout.footer.link.contact": "Contact",
   "layout.footer.link.accessibility": "Accessibility",
   "layout.footer.link.privacy": "Privacy",
@@ -58,5 +59,24 @@
   "storyCard.soldierName": "Soldier name",
   "storyCard.replies": "Replies",
   "storyCard.addReply": "Add a reply",
-  "storyCard.loginToAddReply": "Login to add a reply"
+  "storyCard.loginToAddReply": "Login to add a reply",
+  "page.admin.title": "Admin Approval Panel",
+  "page.admin.soldiers_table_title": "Unapproved Soldiers",
+  "page.admin.stories_table_title": "Unapproved Stories",
+  "page.admin.select_user": "Select User",
+  "page.admin.button.ban": "Ban",
+  "page.admin.table.header.name": "Name",
+  "page.admin.table.header.rank": "Rank",
+  "page.admin.table.header.unit": "Unit",
+  "page.admin.table.header.date": "Fall Date",
+  "page.admin.table.header.image": "Image",
+  "page.admin.table.header.published_by": "Published By",
+  "page.admin.table.header.actions": "Action",
+  "page.admin.table.button.approve": "Approve",
+  "page.admin.table.button.deny": "Deny",
+  "page.admin.table.header.content": "Content",
+  "page.admin.table.header.soldier": "Soldier",
+  "page.admin.table.header.family": "Is Family Story",
+  "page.admin.table.yes_label": "Yes",
+  "page.admin.table.no_label": "No"
 }
