--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -20,6 +20,7 @@
   "layout.footer.link.accessibility": "נגישות",
   "layout.footer.link.privacy": "פרטיות",
   "layout.footer.link.map": "מפת האתר",
+  "layout.sidebar.link.admin": "פאנל ניהול",
   "page.home.header": "ברוכים הבאים לאתר הנצחה",
   "page.home.search.label": "חפש...",
   "page.publicblog.header": "סיפורי חללים",
@@ -65,5 +66,24 @@
   "storyCard.soldierName": "שם החייל",
   "storyCard.replies": "תגובות",
   "storyCard.addReply": "הוסף תגובה",
-  "storyCard.loginToAddReply": "התחבר כדי להוסיף תגובה"
+  "storyCard.loginToAddReply": "התחבר כדי להוסיף תגובה",
+  "page.admin.title": "פאנל ניהול",
+  "page.admin.soldiers_table_title": "חיילים שלא אושרו",
+  "page.admin.stories_table_title": "סיפורים שלא אושרו",
+  "page.admin.select_user": "בחר משתמש",
+  "page.admin.button.ban": "הרחק",
+  "page.admin.table.header.name": "שם",
+  "page.admin.table.header.rank": "דרגה",
+  "page.admin.table.header.unit": "יחידה",
+  "page.admin.table.header.date": "תאריך נפילה",
+  "page.admin.table.header.image": "תמונה",
+  "page.admin.table.header.published_by": "פורסם על ידי",
+  "page.admin.table.header.actions": "פעולה",
+  "page.admin.table.button.approve": "אישור",
+  "page.admin.table.button.deny": "דחייה",
+  "page.admin.table.header.content": "תוכן",
+  "page.admin.table.header.soldier": "חייל",
+  "page.admin.table.header.family": "סיפור משפחתי",
+  "page.admin.table.yes_label": "כן",
+  "page.admin.table.no_label": "לא"
 }
