fix issue where stories are not shown in soldier page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -83,5 +83,6 @@
   "page.addSoldier.error_message_1": "All fields are required",
   "page.addSoldier.error_message_2": "Soldier already exists in system",
   "page.addSoldier.error_message_3": "Unknown error, contact admin",
-  "blog.publishSuccessMessage": "Story published successfully. It will be available after admin approval"
+  "blog.publishSuccessMessage": "Story published successfully. It will be available after admin approval",
+  "error.publishing.story": "Error publishing story"
 }
