--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -90,5 +90,6 @@
   "page.addSoldier.error_message_1": "כל השדות הינם שדות חובה",
   "page.addSoldier.error_message_2": "החייל כבר קיים במערכת",
   "page.addSoldier.error_message_3": "שגיאה לא ידועה - פנה למנהל",
-  "blog.publishSuccessMessage": "הסיפור פורסם בהצלחה. יהיה זמין לאחר אישור מנהל האתר"
+  "blog.publishSuccessMessage": "הסיפור פורסם בהצלחה. יהיה זמין לאחר אישור מנהל האתר",
+  "error.publishing.story": "שגיאה בפרסום הסיפור"
 }
